2001-11-20  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_config.c (bk_config_get): Provide method to access config
	configuration parameters.

2001-11-20  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_addrgroup.c (tcp_end): Flag to request BAG on connection
	completion, otherwise we clean it up.

	* src/bttcp.c: Convert to use new service start interface.

	* lib/b_netutils.c (bk_parse_endpt_spec): Parses BK "URL".
	(bk_netutils_start_service): Start up a service with very user
	friendly arguments.
	(sss_gethost_complete): Where to go when hostname search complets
	in above function.

2001-11-19  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_run.c (bk_run_destroy): remember to destroy event queue.

	* lib/b_addrgroup.c (bag_destroy): Remeber to destroy bni's
	internal to bag.

	* lib/b_getbyfoo.c (bk_getprotobyfoo): Clean up allocated protoent
	if not saved.
	(bk_getservbyfoo): Clean up allocated servent if not saved.

2001-11-18  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_string.c (bk_encode_base64): Correct pointer bugaboo.
	Mime now working.

	* src/bttcp.c: Update James' documentation and formatting.  Shame on James.

	* lib/b_string.c (bk_encode_base64): Mime encode/decode routines

	* src/mmcat.c (main): Mime encode/decode test program (useful too)

2001-11-16  James Tanis  <jtt@winwood.sysdetect.com>

	* src/bttcp.c (main): If using -r without -l make the local name
	BK_ADDR_ANY.
	(proginit): Don't create remote bk_netinfo if we're receiving.
	Listening transfers now working.

	* lib/b_getbyfoo.c (bk_gethostbyfoo): support for "resolving" the
	special token BK_ADDR_ANY ("resolves" to the ANY address for the
	given address family).

	* lib/b_addrgroup.c (do_net_init_af_inet_tcp_listen): Some copy
	paste errors copied from connect section.
	(net_init_check_sanity): Correct sanity checking. Was doing
	*everything* under if (remote && local) condition which was
	patently wrong

	* test/test_getbyfoo.c (main): Better usage message.
